--- a/face_recognition/faces/templates/index.html
+++ b/face_recognition/faces/templates/index.html
@@ -1,27 +1,23 @@
-{% extends "faces_base.html" %}
+{% extends "base.html" %}
 {% block body %}
-<div class="jumbotron jumbotron-fluid">
+<div class="p-5">
     <div class="container">
 
-        <h1 class="display-4">Face recognition</h1>
+        <h1>Face recognition</h1>
         <p class="lead">
             Send me a photo with face and I will tell you who you are!
         </p>
         <hr class="my-4">
 
-        <form class="text-center mt-5" method="post" action="{% url 'result' %}" enctype="multipart/form-data">
+        <form class="text-center mt-5" method="post" action="{% url 'face_recognition' %}" enctype="multipart/form-data">
             {% csrf_token %}
             <input hidden required accept="image/*" type="file" id="face" name="face">
             <label for="face" class="btn btn-primary btn-lg">Take a photo</label>
         </form>
 
         <figure class="figure d-flex align-items-center">
-            <img id="face_preview" class="figure-img img-fluid rounded" style="max-height: 150px"/>
-            <figcaption class="h6 ml-3"></figcaption>
-        </figure>
-
-        <figure>
-
+            <img id="face_preview" class="figure-img img-fluid rounded" style=";max-height: 250px;max-width: 250px" alt="" src=""/>
+            <figcaption class="ms-3"></figcaption>
         </figure>
 
 
@@ -36,19 +32,13 @@
 
             const form = document.querySelector(`form`);
             const data = new FormData(form)
-
             const label = document.querySelector(`figcaption`)
-
             label.innerText = 'I am thinking... Please wait...'
+            const url = form.getAttribute('action')
 
-            const url = `{% url 'result' %}`
-
-            fetch(url, {
-                method: 'post',
-                body: data
-            })
-                .then(r => r.text())
-                .then(text => label.innerText = text)
+            fetch(url, {method: 'post', body: data,})
+            .then(r => r.text())
+            .then(text => label.innerText = text)
             .catch(() => label.innerText = `Something bad happend. Sorry 😞`)
         };
         src.addEventListener("change", function () {
