--- a/face_recognition/faces/templates/base.html
+++ b/face_recognition/faces/templates/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Face recognition</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css"
           rel="stylesheet"
