--- a/face_recognition/faces/templates/index.html
+++ b/face_recognition/faces/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block body %}
-    <div class="p-5">
+    <div class="py-5">
         <div class="container">
 
             <h1>Face recognition</h1>
