--- a/face_recognition/faces/templates/index.html
+++ b/face_recognition/faces/templates/index.html
@@ -13,7 +13,7 @@
                   enctype="multipart/form-data">
                 {% csrf_token %}
                 <input hidden required accept="image/*" type="file" id="faces" name="faces" multiple>
-                <label for="faces" class="btn btn-primary btn-lg">Select a photos</label>
+                <label for="faces" class="btn btn-primary btn-lg">Select photos</label>
             </form>
 
             <div id="imagePreview" class="row my-5"></div>
